--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         <nav class="menu">
           <ul class="menu-list">
             <li class="menu-item">
-              <a href="#">Почему у нас</a>
+              <a data-link="why">Почему у нас</a>
             </li>
             <li class="menu-item">
-              <a href="#">Меню бургеров</a>
+              <a data-link="products">Меню бургеров</a>
             </li>
             <li class="menu-item">
-              <a href="#">Офомление заказа</a>
+              <a data-link="order">Офомление заказа</a>
             </li>
           </ul>
         </nav>
-        <div class="currency" title="изменить валюту">$</div>
+        <div class="currency" id="change-currency" title="изменить валюту">$</div>
       </div>
     </header>
 
@@ -43,7 +43,7 @@
           <p class="main-text">Мы обновили наше меню, спешите попробовать сезонные новинки и насладиться отличным вкусом
             наших бургеров. Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.</p>
           <div class="main-action">
-            <button class="button">Смотреть меню</button>
+            <button class="button" id="main-action-button">Смотреть меню</button>
           </div>
         </div>
         <img src="images/main_burger.png" alt="big burger" class="main-image">
@@ -51,7 +51,7 @@
     </section>
   </section>
 
-  <section class="why">
+  <section class="why" id="why">
     <div class="container">
       <div class="why-title common-title">Почему нас выбирают</div>
       <div class="why-items">
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <section class="products">
+  <section class="products" id="products">
     <div class="container">
       <div class="products-title common-title">выберите свой бургер</div>
       <div class="products-items">
@@ -90,7 +90,7 @@
             айсбер, майонез, кетчуп, сырный соус</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">360 гр</div>
             </div>
             <div class="products-item-action">
@@ -114,7 +114,7 @@
             маринованный, лук маринованный, салат Ромен, бекон, соус BBQ</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">7 $</div>
+              <div class="products-item-price" data-base-price="7">7 $</div>
               <div class="products-item-weight">390 гр</div>
             </div>
             <div class="products-item-action">
@@ -138,7 +138,7 @@
             томат, бекон, красный лук, соус бургер, горчица</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">10 $</div>
+              <div class="products-item-price" data-base-price="10">10 $</div>
               <div class="products-item-weight">420 гр</div>
             </div>
             <div class="products-item-action">
@@ -162,7 +162,7 @@
             соус барбекю, соус сырный, салат айсберг</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">7 $</div>
+              <div class="products-item-price" data-base-price="7">7 $</div>
               <div class="products-item-weight">220 гр</div>
             </div>
             <div class="products-item-action">
@@ -186,7 +186,7 @@
             сыр, сырный соус, кетчуп, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">220 гр</div>
             </div>
             <div class="products-item-action">
@@ -210,7 +210,7 @@
             криспи лук, кетчуп, соус сырный, горчица, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">9 $</div>
+              <div class="products-item-price" data-base-price="9">9 $</div>
               <div class="products-item-weight">320 гр</div>
             </div>
             <div class="products-item-action">
@@ -233,7 +233,7 @@
           <div class="products-item-text">Булочка для бургера, вегетарианская котлета, красный лук, сыр, свежий томат, соус барбекю, соус сырный, салат айсберг</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">280 гр</div>
             </div>
             <div class="products-item-action">
@@ -256,7 +256,7 @@
           <div class="products-item-text">Булочка для бургера, говяжья котлета, грудинка, помидор, огурец маринованный, красный лук, сыр, перец халапеньо, кетчуп, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">7 $</div>
+              <div class="products-item-price" data-base-price="7">7 $</div>
               <div class="products-item-weight">380 гр</div>
             </div>
             <div class="products-item-action">
@@ -279,7 +279,7 @@
           <div class="products-item-text">Булочка для бургера, две говяжьи котлеты, двойной сыр чеддар, огурец маринованный, криспи лук, кетчуп, соус сырный, горчица, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">11 $</div>
+              <div class="products-item-price" data-base-price="11">11 $</div>
               <div class="products-item-weight">400 гр</div>
             </div>
             <div class="products-item-action">
@@ -302,7 +302,7 @@
           <div class="products-item-text">Булочка для бургера, говяжья котлета, бекон, сыр чеддар, яйцо, салями, соус барбекю, соус сырный, салат айсберг, свежий томат</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">9 $</div>
+              <div class="products-item-price" data-base-price="9">9 $</div>
               <div class="products-item-weight">300 гр</div>
             </div>
             <div class="products-item-action">
@@ -325,7 +325,7 @@
           <div class="products-item-text">Булочка для бургера, вегетарианская котлета из нута, цуккини на гриле, помидор, огурец маринованный, сыр, горчичный соус, кетчуп, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">320 гр</div>
             </div>
             <div class="products-item-action">
@@ -348,7 +348,7 @@
           <div class="products-item-text">Булочка для бургера, котлета говяжья, грудинка, красный лук, огурец маринованный, томат, кетчуп, двойной сыр чеддар, горчица, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">9 $</div>
+              <div class="products-item-price" data-base-price="9">9 $</div>
               <div class="products-item-weight">360 гр</div>
             </div>
             <div class="products-item-action">
@@ -367,7 +367,7 @@
     </div>
   </section>
 
-  <section class="order">
+  <section class="order" id="order">
     <div class="container">
       <div class="order-title common-title">Офомление заказа</div>
       <img src="images/order_image.png" alt="burger in the box" class="order-image">
@@ -375,15 +375,15 @@
           <div class="order-form-text">Заполните все данные и наш менеджер свяжется с вами для подтверждения заказа</div>
           <div class="order-form-inputs">
             <div class="order-form-input">
-              <input type="text" placeholder="Ваш заказ">
+              <input type="text" placeholder="Ваш заказ" id="burger">
             </div>
             <div class="order-form-input">
-              <input type="text" placeholder="Ваше имя">
+              <input type="text" placeholder="Ваше имя" id="name">
             </div>
             <div class="order-form-input">
-              <input type="text" placeholder="Ваш телефон">
+              <input type="text" placeholder="Ваш телефон" id="phone">
             </div>
-            <button class="button">Оформить заказ</button>
+            <button class="button" id="order-action">Оформить заказ</button>
           </div>
         </form>      
     </div>
@@ -398,7 +398,7 @@
     </div>
   </footer>
 
-
+<script src="scripts/script.js"></script>
 </body>
 
 </html>
